static/pinax/css/override.css
/*****************************
 * SmeuhSocial custom styles *
 *
 * Yellow: #F4C021
 * Dark green: #00B000
 * Fluorescent green: #00FF00
 * Text light background: #333
 * Text dark background: #ccc
 *
 *****************************/

body {
  background-color: #000;
}

#body-wrapper {
  background-color: #fff;
  background-image: url(/media/static/img/white-texture.jpg);
  overflow: hidden;
}

body:not(.home) #body {
  max-width: 900px;
  margin: auto;
}

#subnav {
  border-bottom: 1px solid #333;
}

h1 {
  color: #00B000;
  font-size: 24px;
}

h1 {
  text-shadow: 0.5px 0.5px 0px #aaa;
}

.home h2 a:visited {
  color: #00B000;
}

#id_comment {
  width: 98%;
}

#intro-text {
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 24px;
}

.homepage-item {
  border-bottom: 1px solid #CCC;
  word-wrap: break-word;
}

.homepage-item.first {
  border-top: 1px solid #CCC;
}

/* Homepage players */
.home .audiotracks-list-entry {
  width: 100%;
  margin: 0;
}

.home .audiotracks-list-entry {
  padding-top: 6px;
  padding-bottom: 6px;
  border-bottom: 1px solid #CCC;
}

.home .audiotracks-list-entry:nth-child(1) {
  border-top: 1px solid #CCC;
}

.home .audiotracks-list-entry .track-title {
  font-size: 12px;
}


.audiotracks-list-entry .audiotracks-action {
  font-size: 10px;
}

/* Homepage blog posts */
.blog-tease {
  clear: left;
}


/* Detail page generic styles */

.next-previous {
  margin: 0px 0px 24px 0;
  width: 100%;
}

.previous {
  float: right;
}

/* Pagination */

.pagination {
  margin-top: 24px;
}

.pagination a,
.pagination span,
.pagination span.disabled,
.pagination span.current,
.audiotracks-download a
{
  background-color: #111;
  font-weight: bold;
  font-size: 16px;
  color: #F4C021;
  border: 4px solid #00B000;
  padding: 0.2em 0.5em;
  border-radius: 6px; 
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
}

.pagination li:not(.active) a:hover,
.photos .pagination a:hover,
.tweets .pagination a:hover,
.audiotracks-download a:hover
{
  background-color: #00B000;
  color: #111;
}

.pagination span.current {
  background-color: #F4FFE8;
}

.pagination span.disabled {
  display: none;
}

textarea#new_tweet {
  width: 100%;
  height: 2.5em;
}

.tweet-item:nth-child(even) {
  background-color: transparent;
}

footer {
  border-top: 5px solid #00B000;
  padding: 12px 1.66%;
  background-color: black;
  color: #ccc;
  line-height: 24px;
}

footer a,
footer a:visited {
  color: #F4C021
}

footer #locale_switcher {
  float: right;
}

@media screen and (min-width: 1200px) {
  #body {
    margin: 0 1.66%;
  }
  .homepage-block  {
    width: 18.61%;
    margin: 0 1.73% 0 0;
  }
  .homepage-block.latest-blogs {
    margin-right: 0;
  }
  .homepage-photo.even {
    margin-right: 0;
  }
}

@media screen and (max-width: 1200px) {
  .homepage-photo {
    width: 31%;
    margin: 0 1% 6px 0;
  }
}

/* When window gets narrower, navigation must go underneath the logo */
@media screen and (max-width: 840px) {
  #tabhead .logo {
    height: 80px;
  }
  #right_tabs {
    top: 60px;
    right: 0;
  }  
}

/* Again, laying out header at a lower resolution to avoid clashing elements */
@media screen and (max-width: 555px) {
  #tabhead .logo {
    height: 75px;
  }
  #right_tabs {
    top: 55px;
    right: 0;
  }
  ul.tabs li {
    font-size: 11px;
  }
  ul.tabs li a {
    padding: 1px 10px;
  }
  #subnav ul {
    margin: 0 0;
  }
  #subnav ul a:link, #subnav ul a:visited {
    padding: 2px 10px 2px 4px;
  }
}

/* Intermediate width: 2 columns */
@media screen and (min-width: 481px) and (max-width: 1200px) {
  #intro-text {
    padding: 0 3.332%;
  }
  .homepage-block {
    width: 45%;
    margin: 0 0 2% 3.332%;
  }
  .homepage-block.latest-tweets {
    margin-left: 3.332%;
  }
  .photo-block {
    clear: left;
  }
  footer {
    padding: 12px 3.332%;
  }
}

/* Smart phones */
@media screen and (max-width: 480px) {
  .logo img {
    /* original size: 272×57 */
    width: 163px;
    height: 34px;
  }
  #intro-text {
    padding: 0 1%;
  }
  .home h2,
  .home h2 a {
    color: #F4FFE8;
    padding: 1%;
    background-color: #00B000;
    border-top: 1px solid #36d836;
    border-bottom: 1px solid #218421;
  }
  #homepage-tweet-form {
    width: 98%;
    margin: auto;
  }
  .photo-block .photos {
    padding-left: 1%;
  }
  .homepage-block {
    margin-bottom: 24px;
    width: 100%;
  }
  .homepage-item {
    padding: 1%;
  }
  .homepage-item:nth-child(odd),
  .home .audiotracks-list-entry:nth-child(odd) {
    background-color: #F4FFE8;
  }
  #tabhead .logo {
    height: 60px;
  }
  #tabhead .login {
    top: 32px;
    left: 6px;
  }
  #tabhead {
    border-bottom-width: 0px;
  }
  #right_tabs {
    position: static;
    top: auto;
  }
  #right_tabs ul {
    white-space: nowrap;
    top: 60px;
    left: 0;
  }
  #right_tabs li {
    display: inline-block;
  }  
  #right_tabs li a {
    padding: 0 4px;
  }
  ul.tabs {
    margin-bottom: 0;
  }
  .home h2 a:visited {
    color: #ddd;
  }
}

